src/test/ui/issues/issue-21356.stderr
error: invalid fragment specifier `t_ty`
  --> $DIR/issue-21356.rs:13:22
   |
LL | macro_rules! test { ($wrong:t_ty ..) => () }
   |                      ^^^^^^^^^^^
   |
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `literal`, `path`, `meta`, `tt`, `item` and `vis`

error: aborting due to previous error

